k8s/dev/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dev-deployment
  namespace: dev-namespace

spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app

    spec:
      containers:
        - name: dev-springboot-container
          image: rohitkumar4praja/product-app:latest
          ports:
            - containerPort: 8080
