k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dev-ingress
  namespace: dev-namespace

spec:
  ingressClassName: nginx

  rules:
    - host: product.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: dev-service
                port:
                  number: 80
